asr from overleaf

--- a/document/arxiv/asr_arxiv.tex
+++ b/document/arxiv/asr_arxiv.tex
@@ -35,7 +35,6 @@
 \usepackage[para,online,flushleft]{threeparttable}
 \usepackage{wasysym}
 \usepackage{amssymb}
-\usepackage{enumitem}
 \usetikzlibrary{arrows}
 % \usepackage{subfig}
 \usepackage{breakcites}
@@ -49,6 +48,7 @@
 % \usepackage[disable]{todonotes}
 \usepackage{siunitx}
 \usepackage{xurl} %for long URLs
+\usepackage[shortlabels]{enumitem}
 
 % for caption at top of table
 \usepackage{float}
