--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -111,7 +111,7 @@ We have implemented the Assertion Checking subsystem as a PostgreSQL database wi
 
 \begin{figure*} [h!]
     \centering
-    \includegraphics[width=18cm]{..other/figures/DBMS_deployment.png}
+    \includegraphics[width=18cm]{../other/figures/DBMS_deployment.png}
     \caption{Deployment Diagram of the Oracle as a PostgreSQL DBMS, showing how the Data Capture and Assertion Checking functions are allocated.}
     \label{fig:dbms_deployment}
 \end{figure*}
@@ -126,7 +126,7 @@ PostGIS functionality can also be used to generate more complex geometric dynami
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=8.5cm]{..other/figures/Slide5b.jpg}
+    \includegraphics[width=8.5cm]{../other/figures/Slide5b.jpg}
     \caption{Database view of a driving scenario}
     \label{fig:assertion_database_annotated}
 \end{figure}
@@ -166,7 +166,7 @@ We have found that assertions applied to simulation or runtime monitoring tend t
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.98\linewidth]{..other/figures/Assertion Categories Figure.png}
+    \includegraphics[width=0.98\linewidth]{../other/figures/Assertion Categories Figure.png}
     \caption{Categories of assertions}
     \label{fig:categories_of_assertions}
 \end{figure}
@@ -362,7 +362,7 @@ A diagram of the full analysis model, and the derivation of the formula for Safe
 The second waypoint is set at the transition from pull-out to passing the VBP, as shown in Figure \ref{fig:Passing_t1}. The figure shows the expressions for the distance travelled by all vehicles in the \textit{$[t_0, t_1]$} time period (taking into account aspects such as the movement of the AV into the oncoming traffic lane):
  \begin{figure}
     \centering
-    \includegraphics[width=0.98\linewidth]{..other/figures/Passing_t1_v2.png}
+    \includegraphics[width=0.98\linewidth]{../other/figures/Passing_t1_v2.png}
     \caption{Scene as the AV begins to pass the VBP, time = $t_1$.}
     \label{fig:Passing_t1}
  \end{figure}
@@ -409,7 +409,7 @@ Further insight to the driving situation can be derived when combining actor sta
 
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=8.5cm]{..other/figures/ERD2.png}
+    \includegraphics[width=8.5cm]{../other/figures/ERD2.png}
     \caption{Entity Relationship Diagram for the PostgreSQL database, for cardinality see crow's foot notation (See URL: \url{https://en.wikipedia.org/wiki/Entity-relationship\_model} Accessed: 2021-08-17.)}
     \label{fig:erd}
 \end{figure}
@@ -470,7 +470,7 @@ Specifically, the scenario involves overtaking on a single-lane road where the t
 
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=8.5cm]{..other/figures/carla_challenge_NHTSA_task6_LHS.jpg}
+    \includegraphics[width=8.5cm]{../other/figures/carla_challenge_NHTSA_task6_LHS.jpg}
     \caption{Overtaking scenario from NHTSA~\cite{nhtsa_precrash}}
     \label{fig:carla_challenge_NHTSA_task6_LHS}
 \end{figure} 
@@ -487,7 +487,7 @@ The map segment used for the simulation case study is shown in Figure \ref{fig:l
 
 \begin{figure}[htp]
     \centering
-    \includegraphics[width=8.5cm]{..other/figures/Lanelets_anno_av.png}
+    \includegraphics[width=8.5cm]{../other/figures/Lanelets_anno_av.png}
     \caption{Lanelets overlaid onto road network.}
     \label{fig:lanelets}
 \end{figure} 
@@ -750,7 +750,7 @@ Performance & significant delay & behaviour\\
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=8.5cm]{..other/figures/SDA_annotated.png}
+    \includegraphics[width=8.5cm]{../other/figures/SDA_annotated.png}
     \caption{Simulation results for performance.}
     \label{fig:performance_results}
 \end{figure}
@@ -814,4 +814,4 @@ In addition to the ongoing work of development of the BRL Simulator Testbench, w
     \end{itemize}
 
 \section{Acknowledgments}
-This research has in part been funded by the ROBOPILOT and CAPRI projects. Both projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 103703 (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1.
+This research has in part been funded by the ROBOPILOT and CAPRI projects. Both projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 103703 (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1.\todo[inline]{Abanoub funding here?}
