added saquib gmail

--- a/document/arxiv/asr_arxiv.tex
+++ b/document/arxiv/asr_arxiv.tex
@@ -72,7 +72,7 @@
 \let\thefootnote\relax\footnotetext{
 \textit{Statements about authorship contribution.}
 Christopher Harper (e-mail: chris.harper@brl.ac.uk),
-Saquib Alam (e-mail:saquib.alam@uwe.ac.uk), 
+Saquib Alam (e-mail:saquib764@gmail.com), 
 S\'everin Lemaignan (e-mail: severin.lemaignan@brl.ac.uk)
 and
 Tony Pipe (e-mail: tony.pipe@brl.ac.uk), 
