added TTC saquib ref

--- a/document/source/assertion.bib
+++ b/document/source/assertion.bib
@@ -18,6 +18,16 @@
   publisher={The Korean Institute of Electrical Engineers}
 }
 
+@article{wang2019analysis,
+  title={Analysis of cut-in behavior based on naturalistic driving data},
+  author={Wang, Xuesong and Yang, Minming and Hurwitz, David},
+  journal={Accident Analysis \& Prevention},
+  volume={124},
+  pages={127--137},
+  year={2019},
+  publisher={Elsevier}
+}
+
 @book{vienna,
 author={{\relax Economic Commission for Europe Inland Transport Committee}},
 title={Convention On Road Traffic},
