arxiv submission files

--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -532,7 +532,9 @@ The fixed overtaking manoeuvre trajectory that had been pre-set for the AV vehic
 \begin{tabular}{lcccc}
 \hline
 \\
-\multirow{3}{*}{\textbf{Scenario}} & \textbf{Achieved} & \multicolumn{3}{c}{\textbf{Distance Ahead required by profile (m)}}\\
+\multirow{3}{*}{\textbf{Scenario}} & \textbf{Achieved} & \multicolumn{3}{c}{
+\textbf{Distance Ahead required by profile (m)}}\\ %GC edit for arxiv
+% \textbf{Distance Ahead required (m)}}\\
 & \textbf{Distance} & `Relaxed' & `Hurried' & `Aggressive' \\
 & \textbf{Ahead (m)} & 101.39 & 63.73 & 40.02 \\
 \\
@@ -814,4 +816,4 @@ In addition to the ongoing work of development of the BRL Simulator Testbench, w
     \end{itemize}
 
 \section{Acknowledgments}
-This research has in part been funded by the ROBOPILOT and CAPRI projects. Both projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 103703 (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1.\todo[inline]{Abanoub funding here?}
+This research has in part been funded by the ROBOPILOT and CAPRI projects. Both projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 103703 (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1. Also special thanks to S\'everin Lemaignan.
