--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -1,7 +1,7 @@
 \documentclass[letterpaper, 10 pt, journal, twoside]{IEEEtran}
 % \input{archive/main.config.tex}
 \usepackage[maxnames=6,firstinits=true,doi=false,url=true,isbn=false]{biblatex}
-\addbibresource{../source/cav_determinism.bib}
+\addbibresource{../source/assertion.bib}
 \usepackage{array}
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -10,7 +10,6 @@
 \usepackage{threeparttable}
 \usepackage{balance} %balance columns
 \hyphenation{op-tical net-works semi-conduc-tor}
-\usepackage{enumitem}
 \usepackage{hyperref} % Add  [ocgcolorlinks,pdfusetitle] before hyperref for colored links
 % \usepackage{subfig}
 \usepackage{subcaption}
@@ -25,6 +24,10 @@
 \usepackage{siunitx}
 % \usepackage{draftwatermark}
 \usepackage{flushend}
+\usepackage{multirow}
+\usepackage{listings}
+\usepackage[shortlabels]{enumitem}
+
 
 %-------------------------------------------------------------------------------
 
@@ -33,7 +36,7 @@
 % ***************************************************
 %  TITLE
 % ***************************************************
-\title{On Determinism of Game Engines used for Simulation-based Autonomous Vehicle Verification}
+\title{Safety Validation of Autonomous Vehicles using Assertion-based Oracles}
 % \title{On the Importance of Determinism for Simulation-based Autonomous Vehicle Verification using a Game Engine}
 % \title{On the Precision of Game Engines used for Simulation-based Autonomous Vehicle Verification}
 % \author[1,3]{Abanoub Ghobrial\thanks{$^{1}${\footnotesize \{abanoub.ghobrial, greg.chance, kevin.mcareavey, kerstin.eder\}@bristol.ac.uk}}}
@@ -52,7 +55,7 @@
 % \author{Severin Lemaignan\thanks{$^{2}${\footnotesize \{severin.lemaignan, tony.pipe\}@brl.ac.uk}}}
 % \author{Tony Pipe}
 
-\author{Greg Chance, Abanoub Ghobrial, Kevin McAreavey, S\'everin Lemaignan, Tony Pipe, Kerstin Eder 
+\author{Chris Harper, Greg Chance, Abanoub Ghobrial, Saquib Alam, Kerstin Eder, Tony Pipe 
 \thanks{{\footnotesize
 Manuscript  
 received ...;
@@ -61,23 +64,21 @@ accepted....
 Date of publication ...;
 date of current version ....
 
-\textit{Greg Chance and Abanoub Ghobrial contributed equally to this paper, Greg Chance is the corresponding author.}
-%
+This research has in part been funded by the ROBOPILOT and CAPRI projects. Both projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 103703 (CAPRI) and 103288 (ROBOPILOT). This research was also supported in part by the UKRI Trustworthy Autonomous Systems Node in Functionality under grant number EP/V026518/1. Also special thanks to S\'everin Lemaignan.
 
-This research has in part been funded by the ROBOPILOT and CAPRI projects. Both projects are part-funded by the Centre for Connected and Autonomous Vehicles (CCAV), delivered in partnership with Innovate UK under grant numbers 103703 (CAPRI) and 103288 (ROBOPILOT), respectively.
 % The Associate Editor for this paper was ....
+
+Chris Harper (e-mail: chris.harper@brl.ac.uk),
+Saquib Alam (e-mail: saquib764@gmail.com),
+and
+Tony Pipe (e-mail: tony.pipe@brl.ac.uk) 
+are with the Bristol Robotics Lab, T Block, University of the West of England, Frenchay, Coldharbour Ln, Bristol, BS34 8QZ, United Kingdom. 
 
 Greg Chance (e-mail: greg.chance@bristol.ac.uk), 
 Abanoub Ghobrial (e-mail: abanoub.ghobrial@bristol.ac.uk), 
-Kevin McAreavey (e-mail: kevin.mcareavey@bristol.ac.uk), 
 and 
 Kerstin Eder (e-mail: kerstin.eder@bristol.ac.uk) 
 are with the Trustworthy Systems Lab, Department of Computer Science, University of Bristol, Merchant Ventures Building, Woodland Road, Bristol, BS8 1UB, United Kingdom. 
-
-S\'everin Lemaignan (e-mail: severin.lemaignan@brl.ac.uk)
-and
-Tony Pipe (e-mail: tony.pipe@brl.ac.uk), 
-are with the Bristol Robotics Lab, T Block, University of the West of England, Frenchay, Coldharbour Ln, Bristol, BS34 8QZ, United Kingdom. 
 
 Digital Object Identifier ....
 }}}
@@ -85,7 +86,7 @@ Digital Object Identifier ....
 % \affil{University of West of England, Bristol, UK}
 % \affil{Bristol Robotics Laboratory, Bristol, UK}
 %
-\markboth{IEEE TRANSACTIONS ON INTELLIGENT TRANSPORTATION SYSTEMS VOL. ..., NO. ..., date...}{Chance, Ghobrial \MakeLowercase{\textit{et al.}}: On Determinism of Game Engines used for Simulation-based Autonomous Vehicle Verification}
+\markboth{IEEE TRANSACTIONS ON INTELLIGENT TRANSPORTATION SYSTEMS VOL. ..., NO. ..., date...}{Harper, Chance, Ghobrial \MakeLowercase{\textit{et al.}}: Safety Validation of Autonomous Vehicles}
 %
 \maketitle
 
@@ -98,7 +99,7 @@ Digital Object Identifier ....
 \end{abstract}
 
 \begin{IEEEkeywords}
-Autonomous Driving, Autonomous Vehicles, Determinism, Game Engines, Physics Engines,  Verification and Validation (V\&V), Simulation, Testing
+Verification and Validation (V\&V), Autonomous Driving, Autonomous Vehicles, Simulation, Testing
 \end{IEEEkeywords}
 \IEEEpeerreviewmaketitle 
 
@@ -116,6 +117,10 @@ Autonomous Driving, Autonomous Vehicles, Determinism, Game Engines, Physics Engi
 % ***************************************************
 %  Bio
 % ***************************************************
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/chris.jpg}}]{Chris Harper}
+received the B.Sc. (Hons.) ... 
+\end{IEEEbiography}
+
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/greg.png}}]{Greg Chance}
 received the B.Sc. (Hons.) and Ph.D. degrees in physics from the University of Bath, Bath, U.K., in 2001 and 2005, respectively. He was previously at the Bristol Robotics Lab and is currently a Senior Research Associate with the Trustworthy Systems Laboratory, University of Bristol, Bristol, U.K. His current research interests are simulation-based verification for autonomous systems and cybersecurity. He has ten years industrial experience researching for Oxford Instruments, U.K., and BAE Systems, U.K. Dr Chance is a Chartered Engineer and a member of the Institute of Physics and holds a patent for a novel plasma control method. 
 \end{IEEEbiography}
@@ -124,13 +129,9 @@ received the B.Sc. (Hons.) and Ph.D. degrees in physics from the University of B
 received the MEng degree in mechanical engineering from the University of Bristol, Bristol,  U.K., in 2018. He is currently pursuing the Ph.D. degree in computer science at the University of Bristol and is a part-time Research Associate with the Trustworthy Systems Lab, Bristol,  U.K. From 2018 to 2020, he was a full-time Research Associate with the Trustworthy Systems Lab. His current research interests are techniques to allow self-managing of autonomous safety-critical systems via continual learning during operation; and the development of simulation-based verification techniques for autonomous systems.
 \end{IEEEbiography}
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/kevin.jpg}}]{Kevin McAreavey}
-received a BSc (Hons) in computer science from Queen's University Belfast (QUB) in 2010 followed by a PhD in AI in 2014. He is currently a Senior Research Associate with the Intelligent Systems Laboratory at the University of Bristol (UOB), working on explainable AI for AI-enabled domestic life. Previously he has worked with the Trustworthy Systems Laboratory at UOB and as a Research Fellow at QUB. His research interests are broadly in the areas of knowledge representation and reasoning, agents and multi-agent systems, and automated planning.
-\end{IEEEbiography}
-
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/severin}}]{S\'everin Lemaignan}
-is Associate Professor in Social Robotics and AI at the Bristol Robotics Laboratory, University of the West of England, Bristol. He obtained a joint PhD in Cognitive Robotics from the CNRS/LAAS (France) and the Technical University of Munich (Germany) in 2012. He then joined the EPFL (Switzerland) and Plymouth University (UK) as post-doc, then lecturer in Robotics until 2018, when he joined the Bristol Robotics Lab. His research interest primarily concerns the socio-cognitive aspects of human-robot interaction and he has been focusing his recent experimental work on child-robot interaction and human-in-the-loop machine learning for social robots. Pr.\ S\'everin Lemaignan has been involved in several European projects related to social and cognitive robotics (CHRIS, DREAM, L2TOR) and was  awarded in 2015 a EU H2020 Marie Sk\l{}odowska-Curie Individual Fellowship for his project on robots and theory of mind.
-\end{IEEEbiography}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/saquib.jpeg}}]{Saquib Alam}
+received a BSc (Hons) in engineering physics from the Indian Institute of Technology, Bombay in 2011 and MSc in control systems and robotics from KTH Royal Institute of Technology, Stockholm in 2020 with a specialisation in autonomous control. Since then he has worked as a research engineer at the Bristol Robotics lab building a cloud testbench for autonomous vehicle verification using simulation. 
+ \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/tony}}]{Tony Pipe} 
 received his BSc (Hons.) degree in Electronic Engineering from Warwick in 1979 and, after an eight-year period in industry that included running a small company, received his PhD in Robotics from the University of the West of England (UWE) in 1997. Since 2010 he has been a Professor of Robotics and Autonomous Systems at UWE. He was a founding member of the Bristol Robotics Laboratory (BRL), and acted as one of its two Deputy Directors from its inception in 2006 until 2020. His research interests focus on safe and correct operation whilst in close-proximity to human beings. He has co-authored over 200 international refereed publications, supervised 35 PhDs, and created a BRL income of \pounds10M since 2013. He has acted as BRL-UWE PI on the EPSRC grant ‘Trustworthy Robotic Assistants’, the Programme/Hub grants ‘Robotics for Nuclear Environments’ and ‘National Centre for Nuclear Robotics’, and the Centre for Doctoral Training in Robotics and Autonomous Systems. Prof.\ Pipe has been involved with Connected Autonomous Vehicle research and development since 2015 via the Innovate UK/CCAV funded projects VENTURER, FLOURISH, MultiCAV, CAPRI, ROBOPILOT and CAV-Forth.
@@ -140,5 +141,12 @@ received his BSc (Hons.) degree in Electronic Engineering from Warwick in 1979 a
 is Professor of Computer Science and heads the Trustworthy Systems Laboratory at the University of Bristol, UK. She also leads the Verification and Validation for Safety in Robots research theme at the  Bristol Robotics Laboratory. She has gained extensive experience of verifying complex microelectronic designs while working with leading semiconductor design and Electronic Design Automation companies worldwide. Her research is focused on specification, verification and analysis techniques to verify or explore a system's behaviour in terms of functional correctness, safety, security, performance and energy efficiency. Prof.\ Eder's most recent contributions include agent-based testing, how to use assertions and theorem proving to verify control system designs, energy modeling and static resource analysis techniques to predict energy consumption of software. She holds a PhD in Computational Logic and an MSc in Artificial Intelligence from the University of Bristol, UK, as well as an MEng in Informatics (Dipl.\,Inf.) from the Technical University Dresden, Germany. In 2007 she was awarded an ``Excellence in Engineering'' prize from the Royal Academy of Engineering, UK.
 
 \end{IEEEbiography}
+
+
+% ***************************************************
+%  Appendix
+% ***************************************************
+\input{../source/appendix.tex}
+
 
 \end{document}
