--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -118,7 +118,7 @@ Verification and Validation (V\&V), Autonomous Driving, Autonomous Vehicles, Sim
 %  Bio
 % ***************************************************
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/chris.jpg}}]{Chris Harper}
-received the B.Sc. (Hons.) ... 
+is a Research Fellow in Robotics Safety \& Control at Bristol Robotics Laboratory, researching methods and technologies for safety assurance of autonomous systems, machine learning and AI. For over 20 years Dr Harper has worked in both industry and academia as a safety assurance specialist with experience in system/software hazard and safety analysis, safety cases and safety management, and has also been involved in development of international industry safety standards for robotics. His research interests include assurance methods, high integrity design, safety validation, and safety arguments/cases of autonomous systems. He has recently been working on the CCAV-funded R\&D projects ROBOPILOT (autonomous parcel delivery), CAV Forth (autonomous bus service) and SafeMRX (requirements for CAV minimum risk manoeuvres) and on a project for the Assuring Autonomy International Programme (AAIP) on assistive robotics in healthcare. 
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/greg.png}}]{Greg Chance}
@@ -130,7 +130,7 @@ received the MEng degree in mechanical engineering from the University of Bristo
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/saquib.jpeg}}]{Saquib Alam}
-received a BSc (Hons) in engineering physics from the Indian Institute of Technology, Bombay in 2011 and MSc in control systems and robotics from KTH Royal Institute of Technology, Stockholm in 2020 with a specialisation in autonomous control. Since then he has worked as a research engineer at the Bristol Robotics lab building a cloud testbench for autonomous vehicle verification using simulation. 
+received a B. Tech  in engineering physics from the Indian Institute of Technology, Mumbai in 2015 and MSc in control systems and robotics from KTH Royal Institute of Technology, Stockholm in 2020 with a specialisation in autonomous control. Since then he has worked as a research engineer at the Bristol Robotics lab building a cloud testbench for autonomous vehicle verification using simulation. 
  \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{../other/mugs/tony}}]{Tony Pipe} 
