--- a/coveringLetter/coveringLetter.tex
+++ b/coveringLetter/coveringLetter.tex
@@ -29,17 +29,17 @@
 %	YOUR INFORMATION
 %----------------------------------------------------------------------------------------
 
-\Who{Dr. Greg Chance} % Your name
+\Who{Dr. Chris Harper} % Your name
 
-\Title{, PhD, CEng, MInstP} % Your title, leave blank for no title
+\Title{, PhD} % Your title, leave blank for no title
 
 \authordetails{
-	Trustworthy Systems Lab\\ % Your department/institution
-	University of Bristol\\
-	1 Cathedral Square\\ % Your address
-	Bristol, BS1 5DD, UK\\ % Your city, zip code, country, etc
-	Email: greg.chance@bristol.ac.uk\\ % Your email address
-	URL: \url{bristol.ac.uk}\\ % Your URL
+	Bristol Robotics Lab\\ % Your department/institution
+	University of the West of England\\
+	Colharbour Lane\\ % Your address
+	Bristol, BS34 8QZ, UK\\ % Your city, zip code, country, etc
+	Email: chris.harper@brl.ac.uk\\ % Your email address
+	URL: \url{bristolroboticslab.com/}\\ % Your URL
 	% URL: \url{bristol.ac.uk/engineering/research/trustworthy-systems-laboratory/}\\ % Your URL
 	% YouTube: \url{https://youtu.be/1emO3-OYn5k}
 }
@@ -48,7 +48,7 @@
 %	HEADER CONTENTS
 %----------------------------------------------------------------------------------------
 
-\logo{logo.png} % Logo filename, your logo should have square dimensions (i.e. roughly the same width and height), if it does not, you will need to adjust spacing within the HEADER STRUCTURE block in structure.tex (read the comments carefully!)
+\logo{../document/other/logo/BRL.png} % Logo filename, your logo should have square dimensions (i.e. roughly the same width and height), if it does not, you will need to adjust spacing within the HEADER STRUCTURE block in structure.tex (read the comments carefully!)
 
 
 \headerlineone{} % Top header line, leave blank if you only want the bottom line
@@ -65,20 +65,23 @@
 %----------------------------------------------------------------------------------------
 
 \begin{letter}{
-	Prof. Chen\\
-	Director of TASI\\
-	Electrical and Computer Engineering\\
-	Purdue School of Engineering \& Technology\\
-	Indianapolis, IN 46202
+	Prof. Eskandarian, D.Sc., ASME Fellow\\
+	Department Head\\
+	Nicholas and Rebecca Des Champs Chair/Professor \\
+	Mechanical Engineering Department, Virginia Tech\\
+	Electrical and Computer Engineering Professor (Courtesy Appointment)\\
+	635 Prices Fork Road\\ 
+	449 Goodwin Hall (MC 0238)\\
+	Blacksburg, VA 24061\\
 }
 
 %----------------------------------------------------------------------------------------
 %	LETTER CONTENT
 %----------------------------------------------------------------------------------------
 
-\opening{Dear Prof Yaobin Chen,}
+\opening{Dear Prof Azim Eskandarian,}
 
-We are pleased to submit an original research article entitled “On Determinism of Game Engines used for Simulation-based Autonomous Vehicle Verification” for consideration of publishing in IEEE Transactions on Intelligent Transportation Systems. 
+We are pleased to submit an original research article entitled “Safety Validation of Autonomous Vehicles using Assertion-based Oracles” for consideration of publishing in IEEE Transactions on Intelligent Transportation Systems. 
 
 We confirm that this work is original and has not been published elsewhere and is not currently under consideration for publication elsewhere. We have no conflicts of interest to disclose. 
 
