--- a/coveringLetter/coveringLetter.tex
+++ b/coveringLetter/coveringLetter.tex
@@ -81,17 +81,17 @@
 
 \opening{Dear Prof Azim Eskandarian,}
 
-We are pleased to submit an original research article entitled “Safety Validation of Autonomous Vehicles using Assertion-based Oracles” for consideration of publishing in IEEE Transactions on Intelligent Transportation Systems. 
+\noindent We are pleased to submit an original research article entitled “Safety Validation of Autonomous Vehicles using Assertion-based Oracles” for consideration of publishing in IEEE Transactions on Intelligent Transportation Systems. 
 
-We confirm that this work is original and has not been published elsewhere and is not currently under consideration for publication elsewhere. We have no conflicts of interest to disclose. 
+\noindent We confirm that this work is original and has not been published elsewhere and is not currently under consideration for publication elsewhere. We have no conflicts of interest to disclose. 
 
-Thank you for your consideration. 
+\noindent Thank you for your consideration. 
 
-\closing{Sincerely,}
+\noindent Sincerely,\\
 
-% \begin{figure}
-% 	\includegraphics[width=1in]{signature.png}
-% \end{figure}
+% \noindent \includegraphics[width=1in]{../document/other/signatures/GC.png}
+
+\noindent Dr. Chris Harper
 
 
 %----------------------------------------------------------------------------------------
