update figure and fixed broken ref link

--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -263,7 +263,7 @@ Two methods have evolved for developing assertions from the Highway Code: direct
 
 The basic approach involves simply converting the natural language text into a logical predicate that captures the entities described and their relationship to one another, by the following steps: 
 \begin{enumerate}
-    \item Identify and extract the natural language clause, for which an assertion is to be developed. A separate assertion will be required for every distinct subject-verb-object clause in the text (meaning that a given UKHC rule could easily require on the order of 5-10 separate assertions to be fully covered). Note that the clause must define a \emph{testable} requirement - some UKHC rules are (at least at present) not testable. Refer to Section \ref{discussion_of_results} for further discussion of the testability of UKHC rules.
+    \item Identify and extract the natural language clause, for which an assertion is to be developed. A separate assertion will be required for every distinct subject-verb-object clause in the text (meaning that a given UKHC rule could easily require on the order of 5-10 separate assertions to be fully covered). Note that the clause must define a \emph{testable} requirement - some UKHC rules are (at least at present) not testable. Refer to Section \ref{discussion} for further discussion of the testability of UKHC rules.
     \item Write a natural language hypothesis that reflects the safety property intended by the UKHC rule. One useful approach to doing this is to phrase the natural language hypothesis interrogatively, i.e. as a question. Many rules are written imperatively, as orders or advice for road users to follow. The hypothesis is in effect an interrogative statement, asking whether or not a condition is true (this condition being the safety property to be satisfied). 
     \item Write a logical statement that reflects as closely as possible the relationships between concepts in natural language of the rule (albeit that changes of perspective may need to be applied). Define each high-level concept as a predicate and develop expressions for each in terms of variables in captured or derived data, or in terms of functions/ predicates of the PostGIS library. The concept-predicates will be implemented as the library functions discussed in Section \ref{geospatial_database} and Figure \ref{fig:dbms_deployment}.
     \item Verify the correctness of the above steps by manual design review. (As previously mentioned, this is pragmatically the only method available.)
