--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -19,7 +19,7 @@
 \newcommand{\TODO}[1]{{\color{red}\textbf{TODO: #1}}}
 % \pagenumbering{gobble} %suppresses page numbers
 \usepackage{balance} %balance columns
-%\usepackage{todonotes} 
+\usepackage{todonotes} 
 \usepackage[disable]{todonotes}
 \usepackage{siunitx}
 % \usepackage{draftwatermark}
